--- a/styles/partials/_projects.scss
+++ b/styles/partials/_projects.scss
@@ -4,7 +4,11 @@
 .projects {
   @include flexColumn();
   padding-top: 130px;
-
+  
+  h2 {
+    z-index: -10;
+  }
+  
   &__singleProject {
     @include flexRow();
 
@@ -23,13 +27,15 @@
   &__projectInfo {
     max-width: 500px;
     margin: 0 20px;
-    z-index: -10;
+    h4 {
+      z-index: -10;
+    }
   }
-
+  
   &__projectLinks {
     position: relative;
   }
-
+  
   &__projectButtons {
     margin-top: 20px;
     width: 320px;
@@ -37,7 +43,7 @@
     justify-content: space-between;
     z-index: 1;
     text-transform: capitalize;
-
+    
     &--link {
       position: relative;
       border-radius: 5px;
