--- a/styles/partials/_skills.scss
+++ b/styles/partials/_skills.scss
@@ -8,6 +8,7 @@
 
   h2 {
     margin-bottom: 50px;
+    z-index: -10;
   }
 
   &__list {
